# PRG_II

./: .gitignore  Readme.md  main
2023-08-22/: CMakeLists.txt  exer  exercício.c  fatorial.c  fatorial.h  main  main.c
2023-08-28/: CMakeLists.txt  main  main.c
2023-08-29/: .gitignore  CMakeLists.txt  main.c
2023-10-03/: lista  ponteiro  ponteiro.c
2023-10-17/: CMakeLists.txt  main  main.c
app ChainedList/: CMakeLists.txt  main.c
appord/: CMakeLists.txt  main.c
apppilha/: CMakeLists.txt  main.c
appprg/: .gitignore  CMakeLists.txt  main.c
arquivos_grandes/: CMakeLists.txt  main  main.c  teste.txt
arvore/: CMakeLists.txt  main.c
arvore_avl/: CMakeLists.txt  main.c
hash_table/: CMakeLists.txt  main.c  primeiro  segundo
lista-01/: CMakeLists.txt  ex_1.c  ex_1.h  ex_2.c  ex_2.h  ex_3.c  ex_3.h  ex_4.c  ex_4.h  ex_5.c  ex_5.h  ex_6.c  ex_6.h  ex_7.c  ex_7.h  ex_8.c  ex_8.h  main.c
listaencadeada/: main.c
ponteiros/: CMakeLists.txt  Ponteiros.c
projeto001/: CMakeLists.txt  arquivo.c  arquivo.h  main.c  texto.txt
